// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageContainer > ⚡️ support fixHeader 1`] = `
<DocumentFragment>
  <div
    class="ant-pro-page-container"
  >
    <div
      class="ant-page-header ant-pro-page-container-warp-page-header ant-page-header-ghost"
    >
      <div
        class="ant-page-header-heading "
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
            title="期贤"
          >
            期贤
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageContainer > ⚡️ support fixedHeader 1`] = `null`;

exports[`PageContainer > ⚡️ support footer 1`] = `
<div>
  <div
    class="ant-pro-page-container ant-pro-page-container-with-footer"
  >
    <div
      class="ant-page-header ant-pro-page-container-warp-page-header ant-page-header-ghost"
    >
      <div
        class="ant-page-header-heading "
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
            title="期贤"
          >
            期贤
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-pro-footer-bar"
  >
    <div
      class="ant-pro-footer-bar-left"
    />
    <div
      class="ant-pro-footer-bar-right"
    >
      <button
        type="button"
      >
        right
      </button>
    </div>
  </div>
</div>
`;

exports[`PageContainer > ⚡️ support loading 1`] = `null`;

exports[`PageContainer > ⚡️ support more loading props 1`] = `
<DocumentFragment>
  <div
    class="ant-pro-page-container"
  >
    <div
      class="ant-page-header ant-pro-page-container-warp-page-header ant-page-header-ghost"
    >
      <div
        class="ant-page-header-heading "
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
            title="期贤"
          >
            期贤
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-pro-grid-content"
    >
      <div
        class="ant-pro-grid-content-children"
      >
        <div
          style="padding-block-start: 100px; text-align: center;"
        >
          <div
            aria-busy="true"
            aria-live="polite"
            class="ant-spin ant-spin-lg ant-spin-spinning ant-spin-show-text"
          >
            <span
              class="ant-spin-dot ant-spin-dot-spin"
            >
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
              <i
                class="ant-spin-dot-item"
              />
            </span>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageContainer > 🌛 PageContainer with custom loading 1`] = `
<DocumentFragment>
  <div
    class="ant-pro-page-container custom-className"
  >
    <div
      class="ant-page-header ant-pro-page-container-warp-page-header ant-page-header-ghost"
    >
      <div
        class="ant-page-header-heading "
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
            title="页面标题"
          >
            页面标题
          </span>
        </div>
      </div>
    </div>
    <div
      class="ant-pro-grid-content"
    >
      <div
        class="ant-pro-grid-content-children"
      >
        <div
          id="customLoading"
          style="color: red; padding: 30px; text-align: center;"
        >
          自定义加载...
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageContainer > 🐛 className prop should not be passed to its page header, fix #3493 1`] = `
<div>
  <div
    class="ant-pro-page-container custom-className"
  >
    <div
      class="ant-page-header ant-pro-page-container-warp-page-header ant-page-header-ghost"
    >
      <div
        class="ant-page-header-heading "
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
            title="页面标题"
          >
            页面标题
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`PageContainer > 🐲 FooterToolbar should know width 1`] = `
<div>
  <div
    class="ant-design-pro ant-pro-layout screen-md ant-pro-layout-top-menu ant-pro-layout-fix-siderbar ant-pro-layout-top"
  >
    <div
      class="ant-layout"
      style="min-height: 100%; flex-direction: row;"
    >
      <div
        class="ant-pro-layout-container"
        style="position: relative;"
      >
        <header
          class="ant-layout-header ant-pro-layout-header ant-pro-layout-header-fixed-header-action ant-pro-layout-header-top-menu ant-pro-layout-header-header"
        >
          <div
            class="ant-pro-top-nav-header ant-pro-top-nav-header-light"
          >
            <div
              class="ant-pro-top-nav-header-main"
            >
              <div
                class="ant-pro-top-nav-header-main-left "
              >
                <div
                  class="ant-pro-top-nav-header-logo"
                  id="logo"
                >
                  <a>
                    <svg
                      height="1em"
                      viewBox="0 0 200 200"
                      width="1em"
                    >
                      <defs>
                        <lineargradient
                          id="linearGradient-1"
                          x1="62.1023273%"
                          x2="108.19718%"
                          y1="0%"
                          y2="37.8635764%"
                        >
                          <stop
                            offset="0%"
                            stop-color="#4285EB"
                          />
                          <stop
                            offset="100%"
                            stop-color="#2EC7FF"
                          />
                        </lineargradient>
                        <lineargradient
                          id="linearGradient-2"
                          x1="69.644116%"
                          x2="54.0428975%"
                          y1="0%"
                          y2="108.456714%"
                        >
                          <stop
                            offset="0%"
                            stop-color="#29CDFF"
                          />
                          <stop
                            offset="37.8600687%"
                            stop-color="#148EFF"
                          />
                          <stop
                            offset="100%"
                            stop-color="#0A60FF"
                          />
                        </lineargradient>
                        <lineargradient
                          id="linearGradient-3"
                          x1="69.6908165%"
                          x2="16.7228981%"
                          y1="-12.9743587%"
                          y2="117.391248%"
                        >
                          <stop
                            offset="0%"
                            stop-color="#FA816E"
                          />
                          <stop
                            offset="41.472606%"
                            stop-color="#F74A5C"
                          />
                          <stop
                            offset="100%"
                            stop-color="#F51D2C"
                          />
                        </lineargradient>
                        <lineargradient
                          id="linearGradient-4"
                          x1="68.1279872%"
                          x2="30.4400914%"
                          y1="-35.6905737%"
                          y2="114.942679%"
                        >
                          <stop
                            offset="0%"
                            stop-color="#FA8E7D"
                          />
                          <stop
                            offset="51.2635191%"
                            stop-color="#F74A5C"
                          />
                          <stop
                            offset="100%"
                            stop-color="#F51D2C"
                          />
                        </lineargradient>
                      </defs>
                      <g
                        fill="none"
                        fill-rule="evenodd"
                        stroke="none"
                        stroke-width="1"
                      >
                        <g
                          transform="translate(-20.000000, -20.000000)"
                        >
                          <g
                            transform="translate(20.000000, 20.000000)"
                          >
                            <g>
                              <g
                                fill-rule="nonzero"
                              >
                                <g>
                                  <path
                                    d="M91.5880863,4.17652823 L4.17996544,91.5127728 C-0.519240605,96.2081146 -0.519240605,103.791885 4.17996544,108.487227 L91.5880863,195.823472 C96.2872923,200.518814 103.877304,200.518814 108.57651,195.823472 L145.225487,159.204632 C149.433969,154.999611 149.433969,148.181924 145.225487,143.976903 C141.017005,139.771881 134.193707,139.771881 129.985225,143.976903 L102.20193,171.737352 C101.032305,172.906015 99.2571609,172.906015 98.0875359,171.737352 L28.285908,101.993122 C27.1162831,100.824459 27.1162831,99.050775 28.285908,97.8821118 L98.0875359,28.1378823 C99.2571609,26.9692191 101.032305,26.9692191 102.20193,28.1378823 L129.985225,55.8983314 C134.193707,60.1033528 141.017005,60.1033528 145.225487,55.8983314 C149.433969,51.69331 149.433969,44.8756232 145.225487,40.6706018 L108.58055,4.05574592 C103.862049,-0.537986846 96.2692618,-0.500797906 91.5880863,4.17652823 Z"
                                    fill="url(#linearGradient-1)"
                                  />
                                  <path
                                    d="M91.5880863,4.17652823 L4.17996544,91.5127728 C-0.519240605,96.2081146 -0.519240605,103.791885 4.17996544,108.487227 L91.5880863,195.823472 C96.2872923,200.518814 103.877304,200.518814 108.57651,195.823472 L145.225487,159.204632 C149.433969,154.999611 149.433969,148.181924 145.225487,143.976903 C141.017005,139.771881 134.193707,139.771881 129.985225,143.976903 L102.20193,171.737352 C101.032305,172.906015 99.2571609,172.906015 98.0875359,171.737352 L28.285908,101.993122 C27.1162831,100.824459 27.1162831,99.050775 28.285908,97.8821118 L98.0875359,28.1378823 C100.999864,25.6271836 105.751642,20.541824 112.729652,19.3524487 C117.915585,18.4685261 123.585219,20.4140239 129.738554,25.1889424 C125.624663,21.0784292 118.571995,14.0340304 108.58055,4.05574592 C103.862049,-0.537986846 96.2692618,-0.500797906 91.5880863,4.17652823 Z"
                                    fill="url(#linearGradient-2)"
                                  />
                                </g>
                                <path
                                  d="M153.685633,135.854579 C157.894115,140.0596 164.717412,140.0596 168.925894,135.854579 L195.959977,108.842726 C200.659183,104.147384 200.659183,96.5636133 195.960527,91.8688194 L168.690777,64.7181159 C164.472332,60.5180858 157.646868,60.5241425 153.435895,64.7316526 C149.227413,68.936674 149.227413,75.7543607 153.435895,79.9593821 L171.854035,98.3623765 C173.02366,99.5310396 173.02366,101.304724 171.854035,102.473387 L153.685633,120.626849 C149.47715,124.83187 149.47715,131.649557 153.685633,135.854579 Z"
                                  fill="url(#linearGradient-3)"
                                />
                              </g>
                              <ellipse
                                cx="100.519339"
                                cy="100.436681"
                                fill="url(#linearGradient-4)"
                                rx="23.6001926"
                                ry="23.580786"
                              />
                            </g>
                          </g>
                        </g>
                      </g>
                    </svg>
                    <h1>
                      Ant Design Pro
                    </h1>
                  </a>
                </div>
              </div>
              <div
                class="ant-pro-top-nav-header-menu"
                style="flex: 1;"
              >
                <div
                  style="margin-block-start: 16px;"
                >
                  <div
                    class="ant-skeleton ant-skeleton-active"
                  >
                    <div
                      class="ant-skeleton-content"
                    >
                      <ul
                        class="ant-skeleton-paragraph"
                      >
                        <li
                          style="width: 61%;"
                        />
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </header>
        <main
          class="ant-layout-content ant-pro-layout-content ant-pro-layout-has-header ant-pro-layout-content-has-page-container"
        >
          <div
            class="ant-pro-page-container"
          >
            <div
              class="ant-page-header-no-children"
            />
            <div
              class="ant-pro-grid-content"
            >
              <div
                class="ant-pro-grid-content-children"
              >
                <div
                  class="ant-pro-page-container-children-container"
                >
                  <div
                    class="ant-pro-footer-bar"
                    style="width: 100%;"
                  >
                    <div
                      class="ant-pro-footer-bar-left"
                    />
                    <div
                      class="ant-pro-footer-bar-right"
                    >
                      <button
                        type="button"
                      >
                        qixian
                      </button>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </main>
        <div
          class="ant-pro-layout-has-footer"
          style="height: 64px; margin-block-start: 32px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PageContainer > 🐲 content is text and title is null 1`] = `
<DocumentFragment>
  <div
    class="ant-pro-page-container"
  >
    <div
      class="ant-page-header ant-pro-page-container-warp-page-header ant-page-header-ghost"
    >
      <div
        class="ant-page-header-content"
      >
        <div
          class="ant-pro-page-container-detail"
        >
          <div
            class="ant-pro-page-container-main"
          >
            <div
              class="ant-pro-page-container-row"
            >
              <div
                class="ant-pro-page-container-content"
              >
                just so so
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageContainer > 🐲 content is text and title is null 2`] = `
<DocumentFragment>
  <div
    class="ant-pro-page-container"
  >
    <div
      class="ant-page-header ant-pro-page-container-warp-page-header ant-page-header-ghost"
    >
      <div
        class="ant-page-header-content"
      >
        <div
          class="ant-pro-page-container-detail"
        >
          <div
            class="ant-pro-page-container-main"
          >
            <div
              class="ant-pro-page-container-row"
            >
              <div
                class="ant-pro-page-container-extraContent"
              >
                <div>
                  extraContent
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageContainer > 🐲 footer is null, do not render footerToolbar  1`] = `
<DocumentFragment>
  <div
    class="ant-pro-page-container ant-pro-page-container-with-footer"
  />
  <div
    class="ant-pro-footer-bar"
  >
    <div
      class="ant-pro-footer-bar-left"
    />
    <div
      class="ant-pro-footer-bar-right"
    >
      <button
        type="button"
      >
        qixian
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageContainer > 🐲 footer is null, do not render footerToolbar  2`] = `
<DocumentFragment>
  <div
    class="ant-pro-page-container"
  />
</DocumentFragment>
`;

exports[`PageContainer > 🐲 footer should know width 1`] = `
<div>
  <div
    class="ant-design-pro ant-pro-layout screen-md ant-pro-layout-top-menu ant-pro-layout-fix-siderbar ant-pro-layout-top"
  >
    <div
      class="ant-layout"
      style="min-height: 100%; flex-direction: row;"
    >
      <div
        class="ant-pro-layout-container"
        style="position: relative;"
      >
        <header
          class="ant-layout-header ant-pro-layout-header ant-pro-layout-header-fixed-header-action ant-pro-layout-header-top-menu ant-pro-layout-header-header"
        >
          <div
            class="ant-pro-top-nav-header ant-pro-top-nav-header-light"
          >
            <div
              class="ant-pro-top-nav-header-main"
            >
              <div
                class="ant-pro-top-nav-header-main-left "
              >
                <div
                  class="ant-pro-top-nav-header-logo"
                  id="logo"
                >
                  <a>
                    <svg
                      height="1em"
                      viewBox="0 0 200 200"
                      width="1em"
                    >
                      <defs>
                        <lineargradient
                          id="linearGradient-1"
                          x1="62.1023273%"
                          x2="108.19718%"
                          y1="0%"
                          y2="37.8635764%"
                        >
                          <stop
                            offset="0%"
                            stop-color="#4285EB"
                          />
                          <stop
                            offset="100%"
                            stop-color="#2EC7FF"
                          />
                        </lineargradient>
                        <lineargradient
                          id="linearGradient-2"
                          x1="69.644116%"
                          x2="54.0428975%"
                          y1="0%"
                          y2="108.456714%"
                        >
                          <stop
                            offset="0%"
                            stop-color="#29CDFF"
                          />
                          <stop
                            offset="37.8600687%"
                            stop-color="#148EFF"
                          />
                          <stop
                            offset="100%"
                            stop-color="#0A60FF"
                          />
                        </lineargradient>
                        <lineargradient
                          id="linearGradient-3"
                          x1="69.6908165%"
                          x2="16.7228981%"
                          y1="-12.9743587%"
                          y2="117.391248%"
                        >
                          <stop
                            offset="0%"
                            stop-color="#FA816E"
                          />
                          <stop
                            offset="41.472606%"
                            stop-color="#F74A5C"
                          />
                          <stop
                            offset="100%"
                            stop-color="#F51D2C"
                          />
                        </lineargradient>
                        <lineargradient
                          id="linearGradient-4"
                          x1="68.1279872%"
                          x2="30.4400914%"
                          y1="-35.6905737%"
                          y2="114.942679%"
                        >
                          <stop
                            offset="0%"
                            stop-color="#FA8E7D"
                          />
                          <stop
                            offset="51.2635191%"
                            stop-color="#F74A5C"
                          />
                          <stop
                            offset="100%"
                            stop-color="#F51D2C"
                          />
                        </lineargradient>
                      </defs>
                      <g
                        fill="none"
                        fill-rule="evenodd"
                        stroke="none"
                        stroke-width="1"
                      >
                        <g
                          transform="translate(-20.000000, -20.000000)"
                        >
                          <g
                            transform="translate(20.000000, 20.000000)"
                          >
                            <g>
                              <g
                                fill-rule="nonzero"
                              >
                                <g>
                                  <path
                                    d="M91.5880863,4.17652823 L4.17996544,91.5127728 C-0.519240605,96.2081146 -0.519240605,103.791885 4.17996544,108.487227 L91.5880863,195.823472 C96.2872923,200.518814 103.877304,200.518814 108.57651,195.823472 L145.225487,159.204632 C149.433969,154.999611 149.433969,148.181924 145.225487,143.976903 C141.017005,139.771881 134.193707,139.771881 129.985225,143.976903 L102.20193,171.737352 C101.032305,172.906015 99.2571609,172.906015 98.0875359,171.737352 L28.285908,101.993122 C27.1162831,100.824459 27.1162831,99.050775 28.285908,97.8821118 L98.0875359,28.1378823 C99.2571609,26.9692191 101.032305,26.9692191 102.20193,28.1378823 L129.985225,55.8983314 C134.193707,60.1033528 141.017005,60.1033528 145.225487,55.8983314 C149.433969,51.69331 149.433969,44.8756232 145.225487,40.6706018 L108.58055,4.05574592 C103.862049,-0.537986846 96.2692618,-0.500797906 91.5880863,4.17652823 Z"
                                    fill="url(#linearGradient-1)"
                                  />
                                  <path
                                    d="M91.5880863,4.17652823 L4.17996544,91.5127728 C-0.519240605,96.2081146 -0.519240605,103.791885 4.17996544,108.487227 L91.5880863,195.823472 C96.2872923,200.518814 103.877304,200.518814 108.57651,195.823472 L145.225487,159.204632 C149.433969,154.999611 149.433969,148.181924 145.225487,143.976903 C141.017005,139.771881 134.193707,139.771881 129.985225,143.976903 L102.20193,171.737352 C101.032305,172.906015 99.2571609,172.906015 98.0875359,171.737352 L28.285908,101.993122 C27.1162831,100.824459 27.1162831,99.050775 28.285908,97.8821118 L98.0875359,28.1378823 C100.999864,25.6271836 105.751642,20.541824 112.729652,19.3524487 C117.915585,18.4685261 123.585219,20.4140239 129.738554,25.1889424 C125.624663,21.0784292 118.571995,14.0340304 108.58055,4.05574592 C103.862049,-0.537986846 96.2692618,-0.500797906 91.5880863,4.17652823 Z"
                                    fill="url(#linearGradient-2)"
                                  />
                                </g>
                                <path
                                  d="M153.685633,135.854579 C157.894115,140.0596 164.717412,140.0596 168.925894,135.854579 L195.959977,108.842726 C200.659183,104.147384 200.659183,96.5636133 195.960527,91.8688194 L168.690777,64.7181159 C164.472332,60.5180858 157.646868,60.5241425 153.435895,64.7316526 C149.227413,68.936674 149.227413,75.7543607 153.435895,79.9593821 L171.854035,98.3623765 C173.02366,99.5310396 173.02366,101.304724 171.854035,102.473387 L153.685633,120.626849 C149.47715,124.83187 149.47715,131.649557 153.685633,135.854579 Z"
                                  fill="url(#linearGradient-3)"
                                />
                              </g>
                              <ellipse
                                cx="100.519339"
                                cy="100.436681"
                                fill="url(#linearGradient-4)"
                                rx="23.6001926"
                                ry="23.580786"
                              />
                            </g>
                          </g>
                        </g>
                      </g>
                    </svg>
                    <h1>
                      Ant Design Pro
                    </h1>
                  </a>
                </div>
              </div>
              <div
                class="ant-pro-top-nav-header-menu"
                style="flex: 1;"
              >
                <div
                  style="margin-block-start: 16px;"
                >
                  <div
                    class="ant-skeleton ant-skeleton-active"
                  >
                    <div
                      class="ant-skeleton-content"
                    >
                      <ul
                        class="ant-skeleton-paragraph"
                      >
                        <li
                          style="width: 61%;"
                        />
                      </ul>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </header>
        <main
          class="ant-layout-content ant-pro-layout-content ant-pro-layout-has-header ant-pro-layout-content-has-page-container"
        >
          <div
            class="ant-pro-page-container ant-pro-page-container-with-footer"
          >
            <div
              class="ant-page-header ant-pro-page-container-warp-page-header ant-page-header-ghost"
            >
              <div
                class="ant-page-header-heading "
              >
                <div
                  class="ant-page-header-heading-left"
                >
                  <span
                    class="ant-page-header-heading-title"
                    title="期贤"
                  >
                    期贤
                  </span>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-pro-footer-bar"
            style="width: 100%;"
          >
            <div
              class="ant-pro-footer-bar-left"
            />
            <div
              class="ant-pro-footer-bar-right"
            >
              <button
                type="button"
              >
                qixian
              </button>
            </div>
          </div>
        </main>
        <div
          class="ant-pro-layout-has-footer"
          style="height: 64px; margin-block-start: 32px;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`PageContainer > 🐲 pro-layout support breadcrumbProps 1`] = `
<DocumentFragment>
  <div
    class="ant-design-pro ant-pro-layout screen-md ant-pro-layout-fix-siderbar ant-pro-layout-side"
  >
    <div
      class="ant-layout ant-layout-has-sider"
      style="min-height: 100%; flex-direction: row;"
    >
      <div
        style="width: 256px; overflow: hidden; flex: 0 0 256px; max-width: 256px; min-width: 256px; transition: all 0.2s ease 0s;"
      />
      <aside
        class="ant-layout-sider ant-layout-sider-dark ant-pro-sider ant-pro-sider-fixed ant-pro-sider-layout-side ant-pro-sider-light"
        style="flex: 0 0 256px; max-width: 256px; min-width: 256px; width: 256px;"
      >
        <div
          class="ant-layout-sider-children"
        >
          <div
            class="ant-pro-sider-logo"
            id="logo"
          >
            <a>
              <svg
                height="1em"
                viewBox="0 0 200 200"
                width="1em"
              >
                <defs>
                  <lineargradient
                    id="linearGradient-1"
                    x1="62.1023273%"
                    x2="108.19718%"
                    y1="0%"
                    y2="37.8635764%"
                  >
                    <stop
                      offset="0%"
                      stop-color="#4285EB"
                    />
                    <stop
                      offset="100%"
                      stop-color="#2EC7FF"
                    />
                  </lineargradient>
                  <lineargradient
                    id="linearGradient-2"
                    x1="69.644116%"
                    x2="54.0428975%"
                    y1="0%"
                    y2="108.456714%"
                  >
                    <stop
                      offset="0%"
                      stop-color="#29CDFF"
                    />
                    <stop
                      offset="37.8600687%"
                      stop-color="#148EFF"
                    />
                    <stop
                      offset="100%"
                      stop-color="#0A60FF"
                    />
                  </lineargradient>
                  <lineargradient
                    id="linearGradient-3"
                    x1="69.6908165%"
                    x2="16.7228981%"
                    y1="-12.9743587%"
                    y2="117.391248%"
                  >
                    <stop
                      offset="0%"
                      stop-color="#FA816E"
                    />
                    <stop
                      offset="41.472606%"
                      stop-color="#F74A5C"
                    />
                    <stop
                      offset="100%"
                      stop-color="#F51D2C"
                    />
                  </lineargradient>
                  <lineargradient
                    id="linearGradient-4"
                    x1="68.1279872%"
                    x2="30.4400914%"
                    y1="-35.6905737%"
                    y2="114.942679%"
                  >
                    <stop
                      offset="0%"
                      stop-color="#FA8E7D"
                    />
                    <stop
                      offset="51.2635191%"
                      stop-color="#F74A5C"
                    />
                    <stop
                      offset="100%"
                      stop-color="#F51D2C"
                    />
                  </lineargradient>
                </defs>
                <g
                  fill="none"
                  fill-rule="evenodd"
                  stroke="none"
                  stroke-width="1"
                >
                  <g
                    transform="translate(-20.000000, -20.000000)"
                  >
                    <g
                      transform="translate(20.000000, 20.000000)"
                    >
                      <g>
                        <g
                          fill-rule="nonzero"
                        >
                          <g>
                            <path
                              d="M91.5880863,4.17652823 L4.17996544,91.5127728 C-0.519240605,96.2081146 -0.519240605,103.791885 4.17996544,108.487227 L91.5880863,195.823472 C96.2872923,200.518814 103.877304,200.518814 108.57651,195.823472 L145.225487,159.204632 C149.433969,154.999611 149.433969,148.181924 145.225487,143.976903 C141.017005,139.771881 134.193707,139.771881 129.985225,143.976903 L102.20193,171.737352 C101.032305,172.906015 99.2571609,172.906015 98.0875359,171.737352 L28.285908,101.993122 C27.1162831,100.824459 27.1162831,99.050775 28.285908,97.8821118 L98.0875359,28.1378823 C99.2571609,26.9692191 101.032305,26.9692191 102.20193,28.1378823 L129.985225,55.8983314 C134.193707,60.1033528 141.017005,60.1033528 145.225487,55.8983314 C149.433969,51.69331 149.433969,44.8756232 145.225487,40.6706018 L108.58055,4.05574592 C103.862049,-0.537986846 96.2692618,-0.500797906 91.5880863,4.17652823 Z"
                              fill="url(#linearGradient-1)"
                            />
                            <path
                              d="M91.5880863,4.17652823 L4.17996544,91.5127728 C-0.519240605,96.2081146 -0.519240605,103.791885 4.17996544,108.487227 L91.5880863,195.823472 C96.2872923,200.518814 103.877304,200.518814 108.57651,195.823472 L145.225487,159.204632 C149.433969,154.999611 149.433969,148.181924 145.225487,143.976903 C141.017005,139.771881 134.193707,139.771881 129.985225,143.976903 L102.20193,171.737352 C101.032305,172.906015 99.2571609,172.906015 98.0875359,171.737352 L28.285908,101.993122 C27.1162831,100.824459 27.1162831,99.050775 28.285908,97.8821118 L98.0875359,28.1378823 C100.999864,25.6271836 105.751642,20.541824 112.729652,19.3524487 C117.915585,18.4685261 123.585219,20.4140239 129.738554,25.1889424 C125.624663,21.0784292 118.571995,14.0340304 108.58055,4.05574592 C103.862049,-0.537986846 96.2692618,-0.500797906 91.5880863,4.17652823 Z"
                              fill="url(#linearGradient-2)"
                            />
                          </g>
                          <path
                            d="M153.685633,135.854579 C157.894115,140.0596 164.717412,140.0596 168.925894,135.854579 L195.959977,108.842726 C200.659183,104.147384 200.659183,96.5636133 195.960527,91.8688194 L168.690777,64.7181159 C164.472332,60.5180858 157.646868,60.5241425 153.435895,64.7316526 C149.227413,68.936674 149.227413,75.7543607 153.435895,79.9593821 L171.854035,98.3623765 C173.02366,99.5310396 173.02366,101.304724 171.854035,102.473387 L153.685633,120.626849 C149.47715,124.83187 149.47715,131.649557 153.685633,135.854579 Z"
                            fill="url(#linearGradient-3)"
                          />
                        </g>
                        <ellipse
                          cx="100.519339"
                          cy="100.436681"
                          fill="url(#linearGradient-4)"
                          rx="23.6001926"
                          ry="23.580786"
                        />
                      </g>
                    </g>
                  </g>
                </g>
              </svg>
              <h1>
                Ant Design Pro
              </h1>
            </a>
          </div>
          <div
            style="flex: 1; overflow-y: auto; overflow-x: hidden;"
          >
            <div
              style="padding: 24px;"
            >
              <div
                class="ant-skeleton ant-skeleton-active"
              >
                <div
                  class="ant-skeleton-content"
                >
                  <ul
                    class="ant-skeleton-paragraph"
                  >
                    <li />
                    <li />
                    <li />
                    <li />
                    <li />
                    <li
                      style="width: 61%;"
                    />
                  </ul>
                </div>
              </div>
            </div>
          </div>
          <div
            class="ant-pro-sider-collapsed-button"
          >
            <svg
              aria-hidden="true"
              fill="currentColor"
              height="1em"
              viewBox="0 0 12 12"
              width="1em"
            >
              <path
                d="M6.432 7.967a.448.448 0 01-.318.133h-.228a.46.46 0 01-.318-.133L2.488 4.85a.305.305 0 010-.43l.427-.43a.293.293 0 01.42 0L6 6.687l2.665-2.699a.299.299 0 01.426 0l.42.431a.305.305 0 010 .43L6.432 7.967z"
              />
            </svg>
          </div>
        </div>
      </aside>
      <div
        class="ant-pro-layout-container"
        style="position: relative;"
      >
        <main
          class="ant-layout-content ant-pro-layout-content ant-pro-layout-has-header ant-pro-layout-content-has-page-container"
        >
          <div
            class="ant-pro-page-container"
          >
            <div
              class="ant-page-header ant-pro-page-container-warp-page-header ant-page-header-has-breadcrumb ant-page-header-ghost"
            >
              <nav
                class="ant-breadcrumb ant-page-header-breadcrumb"
              >
                <ol>
                  <li>
                    <span>
                      home
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="ant-breadcrumb-separator"
                  >
                    &gt;
                  </li>
                  <li>
                    <span>
                      first
                    </span>
                  </li>
                  <li
                    aria-hidden="true"
                    class="ant-breadcrumb-separator"
                  >
                    &gt;
                  </li>
                  <li>
                    <span>
                      second
                    </span>
                  </li>
                </ol>
              </nav>
            </div>
          </div>
        </main>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageContainer > 💄 base use 1`] = `
<DocumentFragment>
  <div
    class="ant-pro-page-container"
  >
    <div
      class="ant-page-header ant-pro-page-container-warp-page-header ant-page-header-ghost"
    >
      <div
        class="ant-page-header-heading "
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
            title="期贤"
          >
            期贤
          </span>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageContainer > 💄 config is null 1`] = `
<DocumentFragment>
  <div
    class="ant-pro-page-container"
  />
</DocumentFragment>
`;

exports[`PageContainer > 🔥 footer bar support extra 1`] = `
<DocumentFragment>
  <div
    class="qixian_footer ant-pro-footer-bar"
  >
    <div
      class="ant-pro-footer-bar-left"
    >
      <img
        alt="logo"
        src="https://gw.alipayobjects.com/zos/rmsportal/KDpgvguMpGfqaHPjicRK.svg"
      />
    </div>
    <div
      class="ant-pro-footer-bar-right"
    >
      <button
        type="button"
      >
        right
      </button>
    </div>
  </div>
</DocumentFragment>
`;

exports[`PageContainer > 🔥 footer bar support renderContent 1`] = `
<DocumentFragment>
  <div
    class="qixian_footer ant-pro-footer-bar"
  >
    home_toolbar
  </div>
</DocumentFragment>
`;

exports[`PageContainer > 🔥 support footer and breadcrumb 1`] = `
<DocumentFragment>
  <div
    class="ant-pro-page-container ant-pro-page-container-with-footer"
  >
    <div
      class="ant-page-header ant-pro-page-container-warp-page-header ant-page-header-has-breadcrumb ant-page-header-ghost"
    >
      <nav
        class="ant-breadcrumb ant-page-header-breadcrumb"
      >
        <ol>
          <li>
            <a
              class="ant-breadcrumb-link"
              href="#/"
            >
              home
            </a>
          </li>
        </ol>
      </nav>
      <div
        class="ant-page-header-heading "
      >
        <div
          class="ant-page-header-heading-left"
        >
          <span
            class="ant-page-header-heading-title"
            title="期贤"
          >
            期贤
          </span>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ant-pro-footer-bar"
  >
    <div
      class="ant-pro-footer-bar-left"
    />
    <div
      class="ant-pro-footer-bar-right"
    >
      <button
        type="button"
      >
        right
      </button>
    </div>
  </div>
</DocumentFragment>
`;
